Fixed: tiktok button and width

--- a/index.css
+++ b/index.css
@@ -43,6 +43,7 @@ color: #FF2070;
 @media only screen and (min-device-width: 401px) {
     .phone-container {
       display: none;
+      
     }
     .monitor-container {
       display: block;
@@ -53,6 +54,8 @@ color: #FF2070;
 @media screen and (max-width:400px) {
     .phone-container {
         display: block;
+        max-width: 100vw;
+
       }
     .monitor-container {
     display: none;
@@ -60,6 +63,8 @@ color: #FF2070;
 
     .navbar {
       height: 135px;
+      width: auto;
+      max-width: 100vw;
       background-color: #F3EDE5;
     }
     .col {
