--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@ color: #FF2070;
 }
 
 .whatsapp-button {
-  padding: 10 20px;
+  padding: 10 15;
   align-items: center;
   justify-content: center;
   gap: 6.647px;
@@ -32,7 +32,7 @@ color: #FF2070;
   
 
   font-family: "fatfrank", sans-serif;
-  font-size: 25px;
+  font-size: 18px;
   font-weight: 400;
   font-style: normal;
   color: #F3EDE5;
@@ -44,7 +44,6 @@ color: #FF2070;
   right: 30px;
   opacity: 0;
   bottom: -50px;
-  padding: 24px;
   animation: fade-up 1000ms forwards;
   animation-delay: 1000ms;
   margin-bottom: 20px;
@@ -52,13 +51,13 @@ color: #FF2070;
 
 @keyframes fade-up {
   100% {
-      bottom: 150px;
+      bottom: 24px;
       opacity: 1;
   }
 }
 
  /* MONITOR SCREEN CSS  */
-@media only screen and (min-device-width: 401px) {
+@media only screen and (min-device-width: 433px) {
     .phone-container {
       display: none;
       
@@ -69,7 +68,7 @@ color: #FF2070;
   }
 
  /* IPHONE SCREEN CSS  */
-@media screen and (max-width:400px) {
+@media screen and (max-width:432px) {
     .phone-container {
         display: block;
         max-width: 100vw;
