--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ font-family: "fatfrank", sans-serif;
 font-size: 30px;
 font-weight: 400;
 font-style: normal;
-color: #FF2070;
+color: #F3EDE5;
 }
 
 .text {
@@ -73,14 +73,13 @@ color: #FF2070;
     }
     .monitor-container {
       display: block;
-      background-color:#FF2070;
     }
 
     .navbar {
       height: 135px;
       width: auto;
       max-width: 100vw;
-      background-color: #F3EDE5;
+      background-color: #FF2070;
       /* border: 5px solid #FF2070; */
     }
    
@@ -109,7 +108,7 @@ color: #FF2070;
       height: 135px;
       width: auto;
       max-width: 100vw;
-      background-color: #F3EDE5;
+      background-color: #FF2070;
     }
 
     .col {
