--- a/index.css
+++ b/index.css
@@ -23,11 +23,17 @@ color: #F3EDE5;
   align-items: center;
   justify-content: center;
   gap: 6.647px;
-  background-color: #5CB453;
+  /* background-color: #5CB453; */
   position: absolute; 
   bottom: -100px;
   right: -50px;
   border-radius: 57.606px;
+
+  background: #f09433; 
+  background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%); 
+  background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+  background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
 
   font-family: "fatfrank", sans-serif;
   font-size: 18px;
